--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Nerd Font
+# font_family      Hack Nerd Font
+# font_family      Fira Code
+font_family      JetBrains Mono
+# font_family      Hasklig
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -23,7 +26,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 15
 
 #: Font size (in pts)
 
@@ -71,7 +74,7 @@ box_drawing_scale 0.001, 1, 1.5, 2
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-#: }}}
+#: }}
 
 #: Cursor customization {{{
 
@@ -332,7 +335,7 @@ single_window_margin_width -1000.0
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
- window_padding_width 0.0
+ window_padding_width 2.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
@@ -399,8 +402,8 @@ tab_bar_margin_width 0.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style separator
 tab_bar_style fade
+# tab_bar_style fade
 
 #: The tab bar style, can be one of: fade, separator or hidden. In the
 #: fade style, each tab's edges fade into the background color, in the
@@ -441,14 +444,14 @@ tab_title_template {title}
 #: goto_tab N.
 
 # active_tab_foreground   #a5a6a8
-active_tab_foreground   #eceef0
+active_tab_foreground   #dfdfdf
 # active_tab_background   #eee
-active_tab_background   #5e5e5e
+active_tab_background   #161718
 # active_tab_font_style   bold-italic
-active_tab_font_style   normal
-inactive_tab_foreground #6e6e6e
+active_tab_font_style normal
+inactive_tab_foreground #5e5e5e
 # inactive_tab_foreground #444
-inactive_tab_background #5e5e5e
+inactive_tab_background #161718
 # inactive_tab_background #999
 inactive_tab_font_style normal
 
@@ -1031,5 +1034,15 @@ map kitty_mod+delete clear_terminal reset active
 #: }}}
 
 # }}}
-include snazzy.conf
+# include snazzy.conf
+include ./theme.conf
+
 map cmd+k combine : clear_terminal scrollback active : send_text normal \x0c
+
+
+
+
+
+
+
+
