--- a/kitty/snazzy.conf
+++ b/kitty/snazzy.conf
@@ -1,15 +1,12 @@
 # Snazzy Colorscheme for Kitty
 # Based on https://github.com/sindresorhus/hyper-snazzy
 
-# foreground            #eff0eb
-foreground            #eceef0
-# background            #282a36
-background            #191919
+foreground            #eff0eb
+background            #282a36
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
-# cursor                #97979B
-cursor                #eceff1
+cursor                #97979B
 cursor_text_color     #282A36
 
 # black
@@ -17,43 +14,29 @@ color0   #282a36
 color8   #686868
 
 # red
-color1   #ff526f
-color9   #ff526f
-# color1   #FF5C57
-# color9   #FF5C57
+color1   #FF5C57
+color9   #FF5C57
 
 # green
-# color2   #5AF78E
-# color10  #5AF78E
-color2   #c3e88c
-color10  #c3e88c
+color2   #5AF78E
+color10  #5AF78E
 
 # yellow
-# color3   #F3F99D
-# color11  #F3F99D
-color3   #ffca6a
-color11  #ffca6a
+color3   #F3F99D
+color11  #F3F99D
 
 # blue
-color4  #82aafe
-color12 #82aafe
 color4  #57C7FF
 color12 #57C7FF
 
 # magenta
-color5   #c792e9
-color13  #c792e9
-# color5   #FF6AC1
-# color13  #FF6AC1
+color5   #FF6AC1
+color13  #FF6AC1
 
 # cyan
-# color6   #9AEDFE
-# color14  #9AEDFE
-color6   #89ddfe
-color14  #89ddfe
+color6   #9AEDFE
+color14  #9AEDFE
 
 # white
-color7   #fefefe
-color15  #fefefe
-# color7   #F1F1F0
-# color15  #EFF0EB
+color7   #F1F1F0
+color15  #EFF0EB
