update to personal email

--- a/~/.gitconfig
+++ b/~/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Eduardo Marconato Sasso
-	email = eduardo.sasso@gm.com
+	name = Eduardo Sasso
+	email = eduardo.sasso@gmail.com
 [core]
 	pager = delta
 [interactive]
