--- a/~/.gitconfig
+++ b/~/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Eduardo Sasso
-	email = eduardo.sasso@gmail.com
+	name = blakbelt78
+	email = blakbelt78@icloud.com
 [core]
 	pager = delta
 [interactive]
